Mise à jour du projet Todo-List : ajout des composants et corrections

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,7 @@
+<div class="container">
 <h1>Organiser vos taches ! </h1>
 <!--app-home></app-home-->
-<app-todo></app-todo>
+<!--app-todo></app-todo-->
+<app-todo-list></app-todo-list>
+
+</div>
